...
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding"
            android:orientation="vertical">
            <EditText
                android:id="@+id/meetingtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Appointment (Interview|Skype Call|Consulation)"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/textsize"
...
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding"
            android:orientation="vertical">
            <Button
                android:id="@+id/meetingdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/fontsize"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:textStyle="bold"
                android:text="Click to Set Date"
                android:padding="@dimen/padding"
                android:drawableRight="@drawable/ic_event"
                 />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding"
            android:orientation="vertical">
            <Button
                android:id="@+id/meetingtime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Click to Set Time"
                android:drawableRight="@drawable/ic_clock"
                android:textSize="@dimen/fontsize"
                android:padding="@dimen/padding"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:textStyle="bold"/>
...
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/lesspadding"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/saveappointment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize"
                android:padding="@dimen/padding"
                android:text="Save Appointment"
                android:drawableRight="@drawable/ic_done"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

